<resources>
    <string name="app_name">Mideum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mideum</string>
    <string name="nav_header_subtitle">Bloging App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="signInText">Sign In</string>
    <string name="need_an_account"><u>Need an account?</u></string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_caps">LOGIN</string>
    <string name="SIGNUP">SIGNUP</string>
    <string name="login_signup">Login/SignUp</string>
    <string name="hint_username">username</string>
    <string name="sign_up_headline">Sign Up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_feed">My Feed</string>
    <string name="global_feed">Global Feed</string>
    <string name="home">Home</string>
    <string name="date">date</string>
    <string name="follow_someone_to_see_their_posts">follow someone to see their posts</string>
    <string name="add_comments..">add comments..</string>
    <string name="post_comment">Post Comment</string>
    <string name="comments">Comments</string>
    <string name="favourites">Favourites</string>
    <string name="articles">Articles</string>
    <string name="follow">follow</string>
    <string name="follow_caps">Follow</string>
    <string name="unfollow_caps">Unfollow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_urls">Image urls</string>
    <string name="username">username..</string>
    <string name="short_bio_about_you">Short bio about you</string>
    <string name="logout">Logout</string>
    <string name="update_settings">update settings</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="create">create</string>
    <string name="article_title">Article Title</string>
    <string name="what_s_the_article_about">What\'s the article about?</string>
    <string name="write_your_article">Write your article</string>
    <string name="publish_article">Publish Article</string>
</resources>