<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_global_feed"
            android:icon="@drawable/ic_baseline_language_24"
            android:title= "@string/global_feed" />

        <item
            android:id="@+id/nav_my_feed"
            android:visible="false"
            android:icon="@drawable/ic_baseline_home_24"
            android:title= "@string/my_feed" />

        <item
            android:id="@+id/nav_auth"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/login_signup" />

        <item
            android:id="@+id/profileFragment"
            android:visible="false"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/my_profile"/>

        <item
            android:id="@+id/nav_settings"
            android:visible="false"
            android:icon="@drawable/ic_baseline_settings_applications_24"
            android:title="@string/settings"/>

    </group>
</menu>