<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profile"
            type="com.example.mideum.models.domain.Profile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profileView.ProfileFragment">

        <ProgressBar
            android:id="@+id/profileProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadProfileImage="@{profile.image}"
            tools:src="@tools:sample/backgrounds/scenic"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/username_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@{profile.username}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePic"
            tools:text="@string/hint_username" />

        <TextView
            android:id="@+id/bio_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{profile.bio}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_profile"
            tools:text="bio" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/follow"
            app:setFollowButton = "@{profile.following}"
            app:layout_constraintBottom_toBottomOf="@+id/username_profile"
            app:layout_constraintEnd_toEndOf="parent"/>
<!--        -->
<!--        <Button-->
<!--            android:id="@+id/follow_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:text="@string/follow"-->
<!--            app:setFollowButton = "@{profile.following}"-->
<!--            app:checkDrawable = "@drawable/ic_baseline_check_24"-->
<!--            app:blockDrawable = "@drawable/ic_baseline_block_24"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/username_profile"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/bio_profile"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/articles" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourites" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tabLayoutProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
