<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="article"
            type="com.example.mideum.models.domain.Article" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_baseline_emoji_emotions_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{article.author.image}" />

            <TextView
                android:id="@+id/username_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@{article.author.username}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toTopOf="@+id/dateAndTime_view"
                app:layout_constraintStart_toEndOf="@+id/image_view"
                app:layout_constraintTop_toTopOf="@+id/image_view"
                tools:text="username" />

            <TextView
                android:id="@+id/dateAndTime_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/image_view"
                app:layout_constraintStart_toEndOf="@+id/image_view"
                app:layout_constraintTop_toBottomOf="@+id/username_view"
                app:setDate="@{article.createdAt}" />

            <ImageButton
                android:id="@+id/favouritArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/dateAndTime_view"
                app:layout_constraintEnd_toStartOf="@+id/favouriteCounts"
                app:layout_constraintTop_toTopOf="@+id/username_view"
                app:layout_constraintVertical_bias="0.48000002"
                android:background="@color/white"
                app:setFavourite="@{article.favorited}"
                tools:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/favouriteCounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@{String.valueOf(article.favoritesCount)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="@+id/dateAndTime_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/username_view"
                tools:text="10" />

            <TextView
                android:id="@+id/title_article_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{article.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view"
                tools:text="title" />

            <TextView
                android:id="@+id/description_article_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{article.description}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_article_view"
                tools:text="description" />

            <TextView
                android:id="@+id/comment_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{article.body}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_article_view"
                tools:text="body" />

            <TextView
                android:id="@+id/comment_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:text="@string/comments"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_body" />

            <EditText
                android:id="@+id/comment_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/add_comments.."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_text_view" />

            <Button
                android:id="@+id/postCommentButtom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/post_comment"
                app:layout_constraintEnd_toEndOf="@+id/comment_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/comment_edit_text"
                tools:text="Post Comment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/postCommentButtom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

